fix: homepage gif popping out on ios safari

--- a/src/index.pug
+++ b/src/index.pug
@@ -119,7 +119,7 @@ div#icreate-section(style="--section-color: var(--purple)")
         video#projects-1.visible(poster=firstProject.img.src muted autoplay loop playsinline)
           source(src=firstProject.videoSrc type="video/webm")
           source(src=firstProject.backupVideoSrc type="video/mp4")
-        video#projects-2(muted autoplay loop)
+        video#projects-2(muted autoplay loop playsinline)
           source(src='' type="video/webm")
           source(src='' type="video/mp4")
     
