feat: update "works" title + preview

--- a/src/work.scss
+++ b/src/work.scss
@@ -258,7 +258,9 @@ section {
         z-index: -1;
 
         h2 {
+          @include subheader;
           position: absolute;
+          z-index: 2;
           left: -20px;
           right: -20px;
           bottom: 0;
