--- a/src/_includes/nav-styles.scss
+++ b/src/_includes/nav-styles.scss
@@ -1,15 +1,19 @@
 @import './mixins.scss';
 
+$mobile-breakpoint: 850px;
+
 #site-navigation {
-  writing-mode: vertical-rl;
   background: var(--bg-color);
   z-index: 9;
+  width: 100%;
 
   position: fixed;
-  width: var(--nav-height);
-  height: 100vh;
+  height: var(--nav-height);
   top: 0;
-  right: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   a,
   a:visited {
@@ -26,39 +30,15 @@
     align-items: center;
     font-size: 30px;
     font-weight: bold;
+
+    li {
+      line-height: 0;
+    }
   }
 
   #jump-to-sections > .heading {
     font-weight: normal;
     font-size: 24px;
-  }
-
-  #dashed-line-container {
-    position: relative;
-    top: -50px;
-    height: calc(100% + 50px);
-    width: 4px;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    animation: move-slow 1s linear infinite;
-
-    div {
-      width: 20px;
-      height: 100%;
-      background: linear-gradient(
-        var(--body-color-2) 0,
-        var(--body-color-2) 50%,
-        transparent 50%,
-        transparent 100%
-      );
-      background-size: 20px 50px;
-    }
-
-    &.move > div {
-      animation: move-fast var(--nav-anim-duration)
-        cubic-bezier(0.38, 0.02, 0, 1);
-    }
   }
 
   #primary-nav {
@@ -76,13 +56,50 @@
     font-size: 24px;
   }
 
-  @media (min-width: 850px) {
+  #primary-nav-toggle {
+    height: 24px;
+    width: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+    padding: 0;
+    margin-right: 30px;
+
+    * {
+      border-bottom: 4px solid var(--body-color);
+      transition: transform 0.2s, opacity 0.2s;
+    }
+
+    .stripe-top {
+      transform-origin: top right;
+    }
+
+    .stripe-bottom {
+      transform-origin: bottom right;
+    }
+  }
+
+  @media (min-width: $mobile-breakpoint) {
     .mobile {
       display: none;
     }
   }
 
-  @media (max-width: 850px) {
+  @media (min-width: $mobile-breakpoint) {
+    #primary-nav {
+      max-width: var(--content-max-width);
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      font-size: 24px;
+    }
+    #primary-nav-toggle {
+      margin-left: 48px;
+    }
+  }
+
+  @media (max-width: $mobile-breakpoint) {
     writing-mode: initial;
     left: 0;
     width: 100vw;
@@ -90,6 +107,10 @@
     display: flex;
     align-items: center;
     border-bottom: 2px solid var(--bg-color-2);
+
+    #primary-nav-toggle {
+      margin-left: auto;
+    }
 
     #dashed-line-container {
       display: none;
@@ -119,31 +140,6 @@
         width: 30px;
         vertical-align: middle;
         fill: var(--bg-color);
-      }
-    }
-
-    #primary-nav-toggle {
-      height: 24px;
-      width: 30px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: stretch;
-      padding: 0;
-      margin-left: auto;
-      margin-right: 30px;
-
-      * {
-        border-bottom: 4px solid var(--body-color);
-        transition: transform 0.2s, opacity 0.2s;
-      }
-
-      .stripe-top {
-        transform-origin: top right;
-      }
-
-      .stripe-bottom {
-        transform-origin: bottom right;
       }
     }
 
@@ -200,23 +196,5 @@
     #jump-to-sections.toggled {
       height: 100vh;
     }
-  }
-}
-
-@keyframes move-slow {
-  from {
-    transform: translateY(50px);
-  }
-}
-
-@keyframes move-fast {
-  0% {
-    background-position-y: 1000px;
-  }
-  50% {
-    filter: blur(8px);
-  }
-  100% {
-    background-position-y: 0;
   }
 }
