--- a/src/work.scss
+++ b/src/work.scss
@@ -172,10 +172,6 @@ section {
     }
   }
 
-  @media (max-width: 1700px) and (min-width: $tablet-breakpoint) {
-    margin-right: var(--nav-height);
-  }
-
   @media (max-width: $tablet-breakpoint) {
     --content-max-width: 700px;
   }
@@ -185,10 +181,8 @@ section {
   position: fixed;
   top: 0;
   left: 0;
-  margin-right: var(--nav-height);
 
   @media (max-width: $mobile-breakpoint) {
-    margin-right: 0;
     margin-top: var(--nav-height);
   }
 
@@ -205,7 +199,7 @@ section {
   article,
   nav {
     width: 800px;
-    max-width: calc(100vw - var(--nav-height));
+    max-width: 100vw;
     transform: translateX(-100%);
 
     @media (max-width: $mobile-breakpoint) {
