feat: replace Browsersync with Vercel serve + livereload

--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -67,4 +67,4 @@ html(lang="en-US")
 
     main(data-page=slinkit.page) !{content}
 
-  script(src='/__main.mjs' defer='defer')
+  | !{slinkit.scripts}
