--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -39,13 +39,14 @@ html(lang="en-US")
 
   body
     nav#site-navigation
-      ul#jump-to-sections.mobile
+      ul#jump-to-section__links.mobile
 
-      button#jump-to-section-toggle.mobile
-        span 0
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M128 192l128 128 128-128z"/></svg>
-
-      p#current-section.mobile
+      .jump-to-section__container
+        button#jump-to-section__toggle
+          span 0
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M128 192l128 128 128-128z"/></svg>
+        .jump-to-section__label-container
+          p#jump-to-section__label
 
       ul#primary-nav
         li
