fix: hide section labels until JS kicks in

--- a/src/_includes/nav-styles.scss
+++ b/src/_includes/nav-styles.scss
@@ -59,6 +59,8 @@ $mobile-breakpoint: 850px;
         transform: translateY(calc(var(--translate, 0) * -1px + 20px));
 
         span {
+          opacity: 0;
+          visibility: hidden;
           transition: opacity 0.2s;
         }
       }
