feat: add expandable table of contents

--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -39,9 +39,9 @@ html(lang="en-US")
 
   body
     nav#site-navigation
-      ul#jump-to-section__links.mobile
 
       .jump-to-section__container
+        ul#jump-to-section__links
         button#jump-to-section__toggle
           span 0
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M128 192l128 128 128-128z"/></svg>
