--- a/src/_includes/nav-styles.scss
+++ b/src/_includes/nav-styles.scss
@@ -3,7 +3,12 @@
 $mobile-breakpoint: 850px;
 
 #site-navigation {
-  background: var(--bg-color);
+  button {
+    transition: opacity 0.2s;
+    &:hover {
+      opacity: 0.5;
+    }
+  }
   z-index: 9;
   width: 100%;
 
@@ -26,11 +31,44 @@ $mobile-breakpoint: 850px;
 
   ul {
     list-style-type: none;
-    font-size: 30px;
     font-weight: bold;
+    padding: 0;
+  }
+
+  #jump-to-section__links {
+    --anim-duration: 200ms;
+    z-index: 1;
+    position: absolute;
+    top: 100%;
+    left: 4px;
+    font-size: 22px;
+    background: var(--bg-color);
+    border: 2px solid var(--body-color-2);
+    box-shadow: -4px 4px 0 var(--body-color-2);
+    padding: 10px 20px;
+    margin: 0;
+    margin-top: 20px;
+
+    transition: transform, opacity;
+    transition-duration: var(--anim-duration);
+    transform: translateX(-80px);
+    opacity: 0;
+
+    &.toggled {
+      transform: translateX(0);
+      opacity: 1;
+    }
+
+    .heading {
+      font-size: 18px;
+    }
 
     li {
-      line-height: 0;
+      margin-bottom: 24px;
+      white-space: nowrap;
+      a {
+        margin: 0;
+      }
     }
   }
 
@@ -57,6 +95,7 @@ $mobile-breakpoint: 850px;
         writing-mode: vertical-rl;
         line-height: 0;
         transform: translateY(calc(var(--translate, 0) * -1px + 20px));
+        white-space: nowrap;
 
         span {
           opacity: 0;
@@ -68,7 +107,7 @@ $mobile-breakpoint: 850px;
 
     #jump-to-section__toggle {
       font-size: 20px;
-      transition: background-position-y 0.3s;
+      transition: background-position-y 0.3s, opacity 0.2s;
       background: linear-gradient(
         var(--green) 33.33%,
         var(--red) 33.33%,
@@ -120,9 +159,12 @@ $mobile-breakpoint: 850px;
     }
 
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     max-width: var(--content-max-width);
+    transition: background-color var(--anim-duration);
 
     li {
       opacity: 0;
