feat: show / hide primary nav on scroll

--- a/src/_includes/nav-styles.scss
+++ b/src/_includes/nav-styles.scss
@@ -180,6 +180,7 @@ $mobile-breakpoint: 850px;
     }
 
     &.toggled {
+      background-color: var(--bg-color);
       li {
         opacity: 1;
         transform: translateX(0);
