fix: tab indexing on table of contents

--- a/src/_includes/nav-styles.scss
+++ b/src/_includes/nav-styles.scss
@@ -55,6 +55,7 @@ $mobile-breakpoint: 850px;
     opacity: 0;
 
     &.toggled {
+      visibility: visible;
       transform: translateX(0);
       opacity: 1;
     }
