--- a/src/work.scss
+++ b/src/work.scss
@@ -185,6 +185,8 @@ section {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 9999;
+  visibility: hidden;
 
   @media (max-width: $mobile-breakpoint) {
     margin-top: var(--nav-height);
@@ -205,10 +207,7 @@ section {
     width: 800px;
     max-width: 100vw;
     transform: translateX(-100%);
-
-    @media (max-width: $mobile-breakpoint) {
-      max-width: 100vw;
-    }
+    transition: transform 0.3s;
   }
 
   .background {
@@ -237,6 +236,12 @@ section {
   }
 
   article {
+    &:target,
+    &:target ~ .background,
+    &:target ~ nav {
+      transform: translateX(0);
+    }
+
     .content {
       max-width: 600px;
       width: 100%;
@@ -302,15 +307,6 @@ section {
       .body {
         margin-top: 60px;
       }
-    }
-  }
-
-  &:not(.closed) > article {
-    &:target,
-    &:target ~ .background,
-    &:target ~ nav {
-      transform: translateX(0);
-      transition: transform 0.3s;
     }
   }
 }
