--- a/src/_layouts/index.scss
+++ b/src/_layouts/index.scss
@@ -71,9 +71,6 @@ $font-path: '/assets/fonts/Atkinson/';
   }
 }
 
-$tablet-breakpoint: 1200px;
-$mobile-breakpoint: 850px;
-
 * {
   box-sizing: border-box;
 }
@@ -257,7 +254,7 @@ a:hover {
   justify-content: space-between;
   border: 3px solid var(--section-color);
   color: var(--section-color);
-  @include subheader;
+  @include subheader-font;
   font-size: inherit;
   padding: 10px;
   text-decoration: none;
@@ -322,10 +319,15 @@ body {
 section {
   max-width: var(--content-max-width);
   margin: auto;
-  padding-left: 70px;
-  padding-right: 70px;
+  padding-left: 80px;
+  padding-right: 80px;
   padding-bottom: 200px;
   margin-top: 100px;
+
+  @media (max-width: $tablet-breakpoint) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 
   @media (max-width: $mobile-breakpoint) {
     --content-max-width: 600px;
