--- a/src/_includes/nav-styles.scss
+++ b/src/_includes/nav-styles.scss
@@ -35,82 +35,99 @@ $mobile-breakpoint: 850px;
     padding: 0;
   }
 
-  #jump-to-section__links {
-    --anim-duration: 200ms;
-    z-index: 1;
-    position: absolute;
-    top: 100%;
-    left: 4px;
-    font-size: 22px;
+  @media (max-width: $mobile-breakpoint) {
     background: var(--bg-color);
-    border: 2px solid var(--body-color-2);
-    box-shadow: -4px 4px 0 var(--body-color-2);
-    padding: 10px 20px;
-    margin: 0;
-    margin-top: 20px;
-
-    transition: transform, opacity;
-    transition-duration: var(--anim-duration);
-    transform: translateX(-80px);
-    opacity: 0;
-
-    &.toggled {
-      visibility: visible;
-      transform: translateX(0);
-      opacity: 1;
-    }
-
-    .heading {
-      font-size: 18px;
-    }
-
-    li {
-      margin-bottom: 24px;
-      white-space: nowrap;
-      a {
-        margin: 0;
-      }
-    }
+    border-bottom: 2px solid var(--bg-color-2);
   }
 
   .jump-to-section__container {
     margin-left: 10px;
     position: relative;
-    width: 48px;
-    height: 48px;
-    transition: opacity 0.2s, transform 0.2s;
-    transform: translateY(-40px);
-    opacity: 0;
+    overflow: hidden;
 
-    &.showing {
-      transform: translateY(0);
-      opacity: 1;
+    @media (max-width: $mobile-breakpoint) {
+      margin-left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+    }
+
+    @media (min-width: $mobile-breakpoint + 1) {
+      width: 48px;
+      height: 48px;
+      transition: opacity 0.2s, transform 0.2s;
+      transform: translateY(-40px);
+      opacity: 0;
+
+      &.showing {
+        transform: translateY(0);
+        opacity: 1;
+      }
     }
 
     .jump-to-section__label-container {
       overflow: hidden;
-      position: absolute;
-      margin-top: 100%;
-      top: 0;
-      left: 0;
-      height: max-content;
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      flex: 1;
+
+      @media (min-width: $mobile-breakpoint + 1) {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        width: max-content;
+        transform: rotate(0.25turn);
+        transform-origin: bottom left;
+      }
 
       #jump-to-section__label {
         transition: transform 0.5s;
         margin: 0;
-        writing-mode: vertical-rl;
-        line-height: 0;
-        transform: translateY(calc(var(--translate, 0) * -1px + 20px));
+        line-height: 1;
+        transform: translateX(calc(var(--translate, 0) * -1px));
         white-space: nowrap;
 
         span {
           opacity: 0;
           visibility: hidden;
           transition: opacity 0.2s;
+        }
+      }
+    }
+
+    #jump-to-section__links {
+      --anim-duration: 200ms;
+      z-index: 1;
+      position: absolute;
+      top: 100%;
+      left: 4px;
+      font-size: 22px;
+      background: var(--bg-color);
+      border: 2px solid var(--body-color-2);
+      box-shadow: -4px 4px 0 var(--body-color-2);
+      padding: 10px 20px;
+      margin: 0;
+      margin-top: 20px;
+
+      transition: transform, opacity;
+      transition-duration: var(--anim-duration);
+      transform: translateX(-80px);
+      opacity: 0;
+
+      &.toggled {
+        visibility: visible;
+        transform: translateX(0);
+        opacity: 1;
+      }
+
+      .heading {
+        font-size: 18px;
+      }
+
+      li {
+        margin-bottom: 24px;
+        white-space: nowrap;
+        a {
+          margin: 0;
         }
       }
     }
@@ -127,10 +144,8 @@ $mobile-breakpoint: 850px;
       background-size: 100% 300%;
       margin-right: 20px;
 
-      width: inherit;
+      width: 80px;
       height: inherit;
-      border-radius: 100%;
-      padding: 0;
       color: var(--bg-color);
       font-weight: bold;
       display: flex;
@@ -138,74 +153,168 @@ $mobile-breakpoint: 850px;
       justify-content: center;
       position: relative;
 
-      svg {
-        position: absolute;
-        height: 100%;
-        right: 0;
-        top: 0;
-        margin-left: 5px;
-        width: 20px;
-        fill: var(--bg-color);
-        transform: rotate(0.75turn);
+      @media (min-width: $mobile-breakpoint + 1) {
+        border-radius: 100%;
+        padding: 0;
+
+        svg {
+          position: absolute;
+          height: 100%;
+          right: 0;
+          top: 0;
+          margin-left: 5px;
+          width: 20px;
+          fill: var(--bg-color);
+          transform: rotate(0.75turn);
+        }
+      }
+
+      @media (max-width: $mobile-breakpoint) {
+        border-radius: 0;
+
+        svg {
+          height: 1.5em;
+          margin-left: 5px;
+          vertical-align: middle;
+          fill: var(--bg-color);
+        }
       }
     }
   }
 
-  #primary-nav {
-    $base-duration: 200ms;
-    $delay-duration: 40ms;
-    // these were *all* going to be CSS variables originally,
-    // but it turns out you can't compose variables using calc()!
-    // so, I turned $base and $delay into SASS variables with #{}
-    // for the calculation.
-    // --anim-duration is accessed from JS for toggling visibility
-    --anim-duration: #{$base-duration + 4 * $delay-duration};
-    a {
-      opacity: 0.5;
-    }
-    a.active {
-      opacity: 1;
-      font-weight: bold;
-    }
-
-    width: 100%;
-    height: 100%;
+  .primary-nav__container {
     display: flex;
-    justify-content: flex-end;
     align-items: center;
-    max-width: var(--content-max-width);
-    transition: background-color var(--anim-duration);
+    max-width: calc(var(--content-max-width) + 40px);
+    height: 100%;
 
-    li {
-      opacity: 0;
-      transition-property: opacity, transform;
-      transition-duration: $base-duration;
-      pointer-events: none;
-      @for $i from 1 through 4 {
-        &:nth-child(#{$i}) {
-          transform: translateX(80px * (5 - $i));
-          transition-delay: $delay-duration * (5 - $i);
-        }
+    @media (min-width: $mobile-breakpoint + 1) {
+      width: 100%;
+    }
+
+    #primary-nav__toggle {
+      height: 24px;
+      width: 30px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: stretch;
+      padding: 0;
+      margin: 0 20px;
+
+      @media (max-width: $mobile-breakpoint) {
+        margin-left: auto;
+      }
+
+      * {
+        border-bottom: 4px solid var(--body-color);
+        transition: transform 0.2s, opacity 0.2s;
+      }
+
+      .stripe-top {
+        transform-origin: top right;
+      }
+
+      .stripe-bottom {
+        transform-origin: bottom right;
       }
     }
 
-    &.toggled {
-      background-color: var(--bg-color);
-      li {
-        opacity: 1;
-        transform: translateX(0);
-        transition-timing-function: ease-out;
-        pointer-events: all;
+    #primary-nav__links {
+      $base-duration: 200ms;
+      $delay-duration: 40ms;
+      // these were *all* going to be CSS variables originally,
+      // but it turns out you can't compose variables using calc()!
+      // so, I turned $base and $delay into SASS variables with #{}
+      // for the calculation.
+      // --anim-duration is accessed from JS for toggling visibility
+      --anim-duration: #{$base-duration + 4 * $delay-duration};
+      a {
+        opacity: 0.5;
       }
-      ~ #primary-nav-toggle {
-        .stripe-top {
-          transform: rotate(-45deg);
+      a.active {
+        opacity: 1;
+        font-weight: bold;
+      }
+
+      @media (min-width: $mobile-breakpoint + 1) {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        transition: background-color var(--anim-duration);
+
+        li {
+          opacity: 0;
+          transition-property: opacity, transform;
+          transition-duration: $base-duration;
+          pointer-events: none;
+          @for $i from 1 through 4 {
+            &:nth-child(#{$i}) {
+              transform: translateX(80px * (5 - $i));
+              transition-delay: $delay-duration * (5 - $i);
+            }
+          }
         }
-        .stripe-bottom {
-          transform: rotate(45deg);
+      }
+      @media (max-width: $mobile-breakpoint) {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 100vh;
+        /* fix nav height on mobile safari, where 100vh is a little off */
+        height: -webkit-fill-available;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: stretch;
+        overflow: hidden;
+        background: var(--bg-color);
+        transition: transform 0.2s, opacity 0.2s;
+        transform: translateY(-100%);
+        z-index: -1;
+        font-size: 36px;
+
+        li {
+          margin: 30px;
+          margin-left: 0;
+
+          text-align: right;
         }
-        .stripe-middle {
-          transform: scaleX(0);
+
+        a {
+          display: block;
+          margin: 0;
+        }
+      }
+
+      &.toggled {
+        background-color: var(--bg-color);
+        @media (min-width: $mobile-breakpoint + 1) {
+          li {
+            opacity: 1;
+            transform: translateX(0);
+            transition-timing-function: ease-out;
+            pointer-events: all;
+          }
+        }
+        @media (max-width: $mobile-breakpoint) {
+          opacity: 1;
+          transform: translateY(0);
+        }
+        ~ #primary-nav__toggle {
+          .stripe-top {
+            transform: rotate(-45deg);
+          }
+          .stripe-bottom {
+            transform: rotate(45deg);
+          }
+          .stripe-middle {
+            transform: scaleX(0);
+          }
         }
       }
     }
@@ -214,30 +323,6 @@ $mobile-breakpoint: 850px;
   #current-section {
     font-family: var(--header-font);
     font-size: 24px;
-  }
-
-  #primary-nav-toggle {
-    height: 24px;
-    width: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: stretch;
-    padding: 0;
-    margin: 0 30px;
-
-    * {
-      border-bottom: 4px solid var(--body-color);
-      transition: transform 0.2s, opacity 0.2s;
-    }
-
-    .stripe-top {
-      transform-origin: top right;
-    }
-
-    .stripe-bottom {
-      transform-origin: bottom right;
-    }
   }
 
   @media (min-width: $mobile-breakpoint) {
