--- a/src/_includes/nav-styles.scss
+++ b/src/_includes/nav-styles.scss
@@ -43,9 +43,11 @@ $mobile-breakpoint: 850px;
   .jump-to-section__container {
     margin-left: 10px;
     position: relative;
-    overflow: hidden;
+
+    $desktop-btn-size: 48px;
 
     @media (max-width: $mobile-breakpoint) {
+      overflow: hidden;
       margin-left: 0;
       width: 100%;
       height: 100%;
@@ -54,8 +56,8 @@ $mobile-breakpoint: 850px;
     }
 
     @media (min-width: $mobile-breakpoint + 1) {
-      width: 48px;
-      height: 48px;
+      width: $desktop-btn-size;
+      height: $desktop-btn-size;
       transition: opacity 0.2s, transform 0.2s;
       transform: translateY(-40px);
       opacity: 0;
@@ -73,8 +75,8 @@ $mobile-breakpoint: 850px;
       @media (min-width: $mobile-breakpoint + 1) {
         position: absolute;
         top: 20px;
-        left: 20px;
         width: max-content;
+        // make text vertical
         transform: rotate(0.25turn);
         transform-origin: bottom left;
       }
@@ -86,48 +88,14 @@ $mobile-breakpoint: 850px;
         transform: translateX(calc(var(--translate, 0) * -1px));
         white-space: nowrap;
 
+        @media (min-width: $mobile-breakpoint + 1) {
+          line-height: $desktop-btn-size;
+        }
+
         span {
           opacity: 0;
           visibility: hidden;
           transition: opacity 0.2s;
-        }
-      }
-    }
-
-    #jump-to-section__links {
-      --anim-duration: 200ms;
-      z-index: 1;
-      position: absolute;
-      top: 100%;
-      left: 4px;
-      font-size: 22px;
-      background: var(--bg-color);
-      border: 2px solid var(--body-color-2);
-      box-shadow: -4px 4px 0 var(--body-color-2);
-      padding: 10px 20px;
-      margin: 0;
-      margin-top: 20px;
-
-      transition: transform, opacity;
-      transition-duration: var(--anim-duration);
-      transform: translateX(-80px);
-      opacity: 0;
-
-      &.toggled {
-        visibility: visible;
-        transform: translateX(0);
-        opacity: 1;
-      }
-
-      .heading {
-        font-size: 18px;
-      }
-
-      li {
-        margin-bottom: 24px;
-        white-space: nowrap;
-        a {
-          margin: 0;
         }
       }
     }
@@ -144,7 +112,6 @@ $mobile-breakpoint: 850px;
       background-size: 100% 300%;
       margin-right: 20px;
 
-      width: 80px;
       height: inherit;
       color: var(--bg-color);
       font-weight: bold;
@@ -154,6 +121,8 @@ $mobile-breakpoint: 850px;
       position: relative;
 
       @media (min-width: $mobile-breakpoint + 1) {
+        width: $desktop-btn-size;
+        height: $desktop-btn-size;
         border-radius: 100%;
         padding: 0;
 
@@ -171,6 +140,7 @@ $mobile-breakpoint: 850px;
 
       @media (max-width: $mobile-breakpoint) {
         border-radius: 0;
+        width: 80px;
 
         svg {
           height: 1.5em;
@@ -178,6 +148,44 @@ $mobile-breakpoint: 850px;
           vertical-align: middle;
           fill: var(--bg-color);
         }
+      }
+    }
+  }
+
+  #jump-to-section__links {
+    --anim-duration: 200ms;
+    z-index: 1;
+    position: absolute;
+    top: 100%;
+    left: 4px;
+    font-size: 22px;
+    background: var(--bg-color);
+    border: 2px solid var(--body-color-2);
+    box-shadow: -4px 4px 0 var(--body-color-2);
+    padding: 10px 20px;
+    margin: 0;
+    margin-top: 20px;
+
+    transition: transform, opacity;
+    transition-duration: var(--anim-duration);
+    transform: translateX(-80px);
+    opacity: 0;
+
+    &.toggled {
+      visibility: visible;
+      transform: translateX(0);
+      opacity: 1;
+    }
+
+    .heading {
+      font-size: 18px;
+    }
+
+    li {
+      margin-bottom: 24px;
+      white-space: nowrap;
+      a {
+        margin: 0;
       }
     }
   }
