fix: label font size on mobile contact form

--- a/src/contact.scss
+++ b/src/contact.scss
@@ -44,7 +44,7 @@ section {
     padding-bottom: 100px;
 
     label {
-      @include subheader;
+      @include subheader-font;
       font-size: 18px;
     }
 
