feat: rework table of contents to read headers, not sections

--- a/src/index.pug
+++ b/src/index.pug
@@ -21,7 +21,7 @@ section#header-section
 
 section#inbrief-section
   .social-links
-    h2.numbered In brief.
+    h2.numbered#in-brief In brief.
     a(href="https://twitter.com/bholmesdev")
       img(src="/assets/icons/twitter.svg" alt="Twitter icon")
       span Short thoughts
@@ -55,7 +55,7 @@ section#inbrief-section
 
 div#iteach-section(style="--section-color: var(--red)")
   section.section__summary
-    h2.numbered I teach.
+    h2.numbered#i-teach I teach.
     div
       p In brief...
       :markdown-it
@@ -101,7 +101,7 @@ div#iteach-section(style="--section-color: var(--red)")
 
 div#icreate-section(style="--section-color: var(--purple)")
   section.section__summary
-    h2.numbered I create.
+    h2.numbered#i-create I create.
     div
       p In brief...
       :markdown-it
