refactor: rework query for table of content headers

--- a/src/work.pug
+++ b/src/work.pug
@@ -57,7 +57,7 @@ section#complete-section(style="--section-color: var(--red)")
     article(id=project.hash)
       .content
         .macintosh
-          h2 #{project.title}
+          h2.omit-from-toc #{project.title}
           img(src="/assets/svgs/macintosh.svg" alt="")
           .macintosh__img-container
             +video(project)
